==> CommunityGD32Cores/gigadevice-firmware-and-docs/GD32F1x0/GD32F1x0_Firmware_Library_v3.1.0/Projects/USBD/CCID_T0/src/smartcard.c <==
#include "smartcard.h"
#include <stdio.h>
  #define PUTCHAR_PROTOTYPE int __io_putchar(int ch)
  #define PUTCHAR_PROTOTYPE int fputc(int ch, FILE *f)

void SC_PowerCmd(ControlStatus NewState)
{
    if(NewState != DISABLE)
    {
        gpio_bit_reset(SC_CMDVCC_GPIO_PORT, SC_CMDVCC_PIN);
    }
    else
    {
        gpio_bit_set(SC_CMDVCC_GPIO_PORT, SC_CMDVCC_PIN);
    }
}

void SC_Reset(FlagStatus ResetState)
{
    gpio_bit_write(SC_RESET_GPIO_PORT, SC_RESET_PIN, ResetState);
}

void SC_ParityErrorHandler(void)
{
    usart_data_transmit(SC_USART, SCData);

    while(usart_flag_get(SC_USART, USART_FLAG_TC) == RESET)
    {
    }
}

void SC_PTSConfig(void)
{
    uint32_t workingbaudrate = 0, apbclock = 0;
    uint8_t locData = 0, PPSConfirmStatus = 1;

    /* Reconfigure the USART Baud Rate -------------------------------------------*/
    apbclock = rcu_clock_freq_get(CK_USART);
	  apbclock /= ((USART_GP(SC_USART) & (uint16_t)0x00FF) * 2);
	
    
    /* Enable the DMA Receive (Set DMAR bit only) to enable interrupt generation
       in case of a framing error FE */
	  usart_dma_receive_config(SC_USART, USART_DENR_ENABLE);

    if((SC_A2R.T0 & (uint8_t)0x10) == 0x10)
    {
        if(SC_A2R.T[0].InterfaceByte[SC_INTERFACEBYTE_TA].Value != 0x11)
        {
            /* PPSS identifies the PPS request or response and is equal to 0xFF */
            SCData = 0xFF;

            /* Send PPSS */
            usart_data_transmit(SC_USART, SCData);

            while(usart_flag_get(SC_USART, USART_FLAG_TC) == RESET)
            {
            }

            /* PPS0 indicates by the bits b5, b6, b7 equal to 1 the presence of the optional
               bytes PPSI1, PPS2, PPS3 respectively */
            SCData = 0x10;

            /* Send PPS0 */
            usart_data_transmit(SC_USART, SCData);
						
            while(usart_flag_get(SC_USART, USART_FLAG_TC) == RESET)
            {
            }

            /* PPS1 allows the interface device to propose value of F and D to the card */
            SCData = SC_A2R.T[0].InterfaceByte[SC_INTERFACEBYTE_TA].Value;

            /* Send PPS1 */
            usart_data_transmit(SC_USART, SCData);

            while(usart_flag_get(SC_USART, USART_FLAG_TC) == RESET)
            {
            }

            /* PCK check character */ 
            SCData = (uint8_t)0xFF^(uint8_t)0x10^(uint8_t)SC_A2R.T[0].InterfaceByte[SC_INTERFACEBYTE_TA].Value; 

            /* Send PCK */
            usart_data_transmit(SC_USART, SCData);

            while(usart_flag_get(SC_USART, USART_FLAG_TC) == RESET)
            {
            }

            /* Disable the DMA Receive (Reset DMAR bit only) */  
						usart_dma_receive_config(SC_USART, USART_DENR_DISABLE);

            /* PPSS response = PPSS request = 0xFF*/
            if((USART_ByteReceive(&locData, SC_RECEIVE_TIMEOUT)) == SUCCESS)
            {
                if(locData != 0xFF)
                {
                    /*PPSS exchange unsuccessful */
                    PPSConfirmStatus = 0x00;
                }
            }

            /*PPS0 response */
            if((USART_ByteReceive(&locData, SC_RECEIVE_TIMEOUT)) == SUCCESS)
            {
                if(locData != 0x10)
                {
                    /*PPS0 exchange unsuccessful */
                    PPSConfirmStatus = 0x00;
                }
            }

            /* PPS1 response */
            if((USART_ByteReceive(&locData, SC_RECEIVE_TIMEOUT)) == SUCCESS)
            {
                if(locData != SC_A2R.T[0].InterfaceByte[SC_INTERFACEBYTE_TA].Value)
                {
                    /*PPS1 exchange unsuccessful */
                    PPSConfirmStatus = 0x00;
                }
            }

            if((USART_ByteReceive(&locData, SC_RECEIVE_TIMEOUT)) == SUCCESS)
            {
                if(locData != ((uint8_t)0xFF^(uint8_t)0x10^(uint8_t)SC_A2R.T[0].InterfaceByte[SC_INTERFACEBYTE_TA].Value))
                {
                    /*PCK exchange unsuccessful */
                    PPSConfirmStatus = 0x00;
                }
            }
            else
            {
                /*PPS exchange unsuccessful */
                PPSConfirmStatus = 0x00;
            }

            /* PPS exchange successful */
            if(PPSConfirmStatus == 0x01)
            {
                workingbaudrate = apbclock * D_Table[(SC_A2R.T[0].InterfaceByte[SC_INTERFACEBYTE_TA].Value & (uint8_t)0x0F)];
                workingbaudrate /= F_Table[((SC_A2R.T[0].InterfaceByte[SC_INTERFACEBYTE_TA].Value >> 4) & (uint8_t)0x0F)];

                PPS_BaudRate_Set(workingbaudrate);
            }
        }
    }
}

static void SC_Init(void)
{
	  rcu_periph_clock_enable(SC_USART_TX_GPIO_CLK);
	  rcu_periph_clock_enable(SC_USART_CK_GPIO_CLK);

    /* Enable SC_USART clock */
	  rcu_periph_clock_enable(SC_USART_CLK);

    /* Connect PXx to SC_USART_TX */
	  gpio_af_set(SC_USART_TX_GPIO_PORT, SC_USART_TX_AF, SC_USART_TX_SOURCE);

    /* Connect PXx to SC_USART_CK */ 
	  gpio_af_set(SC_USART_CK_GPIO_PORT, SC_USART_CK_AF, SC_USART_CK_SOURCE);

    /* Configure USART Tx and Rx as alternate function push-pull */		
		gpio_output_options_set(SC_USART_CK_GPIO_PORT,GPIO_OTYPE_PP,GPIO_OSPEED_50MHZ,SC_USART_CK_PIN);
		gpio_mode_set(SC_USART_CK_GPIO_PORT,GPIO_MODE_AF,GPIO_PUPD_PULLUP,SC_USART_CK_PIN);

    /* Configure USART Tx pin as alternate function open-drain */
    gpio_output_options_set(SC_USART_TX_GPIO_PORT,GPIO_OTYPE_OD,GPIO_OSPEED_50MHZ,SC_USART_TX_PIN);
		gpio_mode_set(SC_USART_TX_GPIO_PORT,GPIO_MODE_AF,GPIO_PUPD_PULLUP,SC_USART_TX_PIN);
 		
		//nvic_priority_group_set(uint32_t nvic_prigroup);
		 nvic_irq_enable(SC_USART_IRQn, 0, 0);

    /* SC_USART configuration ----------------------------------------------------*/
    /* SC_USART configured as follow:
        - Word Length = 9 Bits
        - 1.5 Stop Bit
        - Even parity
        - BaudRate = 8064 baud
        - Hardware flow control disabled (RTS and CTS signals)
        - Tx and Rx enabled
        - USART Clock enabled
    */

    /* USART Clock set to 4 MHz (PCLK2 (72 MHz) / 18) */
    usart_prescaler_config(SC_USART, 0x09);
    /* USART Guard Time set to 16 Bit */
		usart_guard_time_config(SC_USART, 16);
    
	  usart_synchronous_clock_config(SC_USART, USART_CLEN_EN, USART_CPH_1CK, USART_CPL_LOW);
    /*Configure the initial baudrate*/
		
	  usart_baudrate_set(SC_USART, 10753);
	  usart_parity_config(SC_USART, USART_PM_EVEN);
	  usart_word_length_set(SC_USART, USART_WL_9BIT);
	  usart_stop_bit_set(SC_USART, USART_STB_1_5BIT);
		usart_transmit_config(SC_USART,USART_TRANSMIT_ENABLE);
		usart_receive_config(SC_USART, USART_RECEIVE_ENABLE);

    /* Enable the SC_USART Parity Error Interrupt */
    usart_interrupt_enable(SC_USART, USART_INT_PERR);
    /* Enable the SC_USART Framing Error Interrupt */
    usart_interrupt_enable(SC_USART, USART_INT_ERR);
    
		usart_clock_enable(SC_USART);
    /* Enable the NACK Transmission */
		usart_smartcard_mode_nack_enable(SC_USART);

    /* Enable the Smartcard Interface */
		usart_smartcard_mode_enable(SC_USART);

    /*Configure the auto retry*/
		usart_smartcard_autoretry_config(SC_USART, 0x06);

    /* Enable SC_USART */
    usart_enable(SC_USART);
}

static void SC_DeInit(void)
{
    /* Disable CMDVCC */
    SC_PowerCmd(DISABLE);

    /* Deinitializes the SC_USART */
    usart_deinit(SC_USART);

    /* Disable SC_USART clock */
    rcu_periph_clock_disable(SC_USART_CLK);
}

void SC_VoltageConfig(uint32_t SC_Voltage)
{
    if(SC_Voltage == SC_VOLTAGE_5V)
    {
        /* Select Smartcard 5V */  
        gpio_bit_set(SC_3_5V_GPIO_PORT, SC_3_5V_PIN);
    }
    else
    {
        /* Select Smartcard 3V */      
        gpio_bit_reset(SC_3_5V_GPIO_PORT, SC_3_5V_PIN);
    }
}

static ErrStatus USART_ByteReceive(uint8_t *Data, uint32_t TimeOut)
{
    uint32_t Counter = 0;

    while((usart_flag_get(SC_USART, USART_FLAG_RBNE) == RESET) && (Counter != TimeOut))
    {
        Counter++;
    }

    if(Counter != TimeOut)
    {
        *Data = (uint8_t)usart_data_receive(SC_USART);

        return SUCCESS;
    }
    else 
    {
        return ERROR;
    }
}
